Refactor: Use Wikipedia Page Id in Wikipedia Service